# infopanelbackend

./: .gitignore  Cargo.toml  README.md  env_example  history.txt  log_config.yml
input_files/: Infopanel_new.csv
src/: constants.rs  csv_parse.rs  ctx.rs  db_interactions.rs  error.rs  event_routes.rs  log.rs  main.rs  model.rs  repository.rs  types.rs  web.rs
src/api/: event.rs  mod.rs  test.rs  user.rs
src/controller/: events.rs  mod.rs  rooms.rs  users.rs
src/model/: auth.rs  event.rs  mod.rs  room.rs  user.rs
src/util/: csv_parse.rs  db_interactions.rs  jwt_validation.rs  mod.rs
src/web/: mw_auth.rs  routes_events.rs  routes_login.rs  routes_rooms.rs  routes_tickets.rs
tests/: quick_dev.rs
