[package]
name = "infopanel"
version = "0.2.0"
edition = "2021"
authors = ["Yves Bruckmayer <y.bruckmayer@gmail.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
once_cell = "1.18.0"
log = "0.4.20"
log4rs = "1.2.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.29.1", features = ["full", "macros", "rt-multi-thread", "time"] }
chrono = "0.4.31"
encoding_rs = "0.8.33"
anyhow = "1.0.75"
uuid = { version = "1.6.0", features = ["v4"] }
jsonwebtoken = "9.1.0"
reqwest = { version = "0.12.5", features = ["json"] }
axum = "0.8.1"
http = "1.2.0"
