[package]
name = "infopanelback"
version = "0.2.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "2"
axum = "0.8"
tower-http = { version = "0.6", features = ["fs"] }
tower-cookies = "0.11"
lazy-regex = "2"
strum_macros = "0.27"
uuid = { version = "1", features = ["v4", "fast-rng"] }
surrealdb = "2.0.4"
log = "0.4.20"
log4rs = "1.2.0"
chrono = { version = "0.4", features = ["alloc"] }

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1"
